# ssd1327

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.circleci/: config.yml
examples/: esp32_i2c.rs  graphics_i2c.rs  text_i2c.rs
src/: brightness.rs  command.rs  lib.rs  prelude.rs  size.rs
src/mode/: buffered_graphics.rs  mod.rs  terminal.rs
