[package]
authors = ["jkin8010 <jkin8010@gmail.com>"]
categories = ["embedded", "no-std"]
description = "I2C/SPI driver for the SSD1327 OLED display controller"
documentation = "https://docs.rs/ssd1306"
keywords = ["no-std", "ss1327", "oled", "msp1503", "embedded", "embedded-hal-driver", "esp32"]
license = "MIT OR Apache-2.0"
name = "ssd1327"
readme = "README.md"
repository = "https://github.com/jkin8010/ssd1327"
version = "0.1.0"
edition = "2018"
exclude = [ "build.rs", "build.sh", "memory.x", "doc", "*.jpg", "*.png", "*.bmp" ]
resolver = "2"

# [badges]
# circle-ci = { repository = "jkin8010/ssd1327", branch = "master" }

[package.metadata.docs.rs]
targets = [ "xtensa-esp32-espidf" ]

[dependencies]
embedded-hal = "0.2.5"
display-interface = "0.4.1"
display-interface-i2c = "0.4.0"
display-interface-spi = "0.4.1"
embedded-graphics-core = { version = "0.3.2", optional = true }

[target.xtensa-esp32-espidf.dependencies]
esp-idf-sys = { version = "0.31.4", features = ["native", "binstart"] }

[dev-dependencies]
cast = { version = "0.2.6", default-features = false }
# Used to load BMP images in various examples
tinybmp = "0.3.1"
embedded-graphics = "0.7.1"
# Used by the noise_i2c examples
rand = { version = "0.8.4", default-features = false, features = [ "small_rng" ] }
# Used by the esp32 examples
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", branch = "master" }

[build-dependencies]
embuild = "0.29"
anyhow = "1"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
